# tlb_battery

./: .gitignore  .gitmodules  .mxproject  .nvimrc  CMakeLists.txt  LICENSE  Makefile  README.md  STM32-for-VSCode.config.yaml  STM32Make.make  openocd.cfg  tlb_battery.ioc  tlb_battery.txt
.github/: info.md
.github/workflows/: build_and_release.yml
Core/: template.c  template.h
Core/Inc/: adc.h  bsp.h  can.h  conf.h  db.h  feedback_timebase.h  gpio.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
Core/Inc/Backup/: main.h.bak
Core/Src/: adc.c  bsp.c  can.c  db.c  dma.c  feedback_timebase.c  gpio.c  iwdg.c  main.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  system_stm32f4xx.c  tim.c  usart.c
Core/Src/Backup/: adc.c.bak  can.c.bak  gpio.c.bak  main.c.bak  tim.c.bak  usart.c.bak
Doc/: MCB.dbc  notes.md
Doc/CubeMX_exports/: tlb_battery.txt
Doc/_templates/: template.c  template.h
Lib/cantools/: mcb.c  mcb.h
Tools/serial-studio/: tlb_bat  tlb_bat.json  tlb_bat2.json  tlb_bat3.json
doc/: notes.md
doc/CubeMX_exports/: tlb_battery.txt
openblt_f446re/: .mxproject  Makefile  STM32Make.make  openblt_f446re.ioc
openblt_f446re/Core/Inc/: main.h
openblt_f446re/Core/Inc/BLT/: blt_conf.h
openblt_f446re/Core/Src/: main.c  stm32f4xx_hal_msp.c
openblt_f446re/Core/Src/BLT/: led.c
